--- a/locales/en-US.yml
+++ b/locales/en-US.yml
@@ -110,6 +110,6 @@ errors:
   unexpected_error: "An unexpected error occurred while executing this command:\n`{0}`"
 
 common:
-  back: "back"
+  back: "Back"
   confirm: "Confirm"
   cancel: "Cancel"
