--- a/locales/en-US.yml
+++ b/locales/en-US.yml
@@ -86,7 +86,7 @@ up:
 
 commit:
   name: "commit"
-  description: "Send changes to an application"
+  description: "Send changes to an application."
 
   file:
     name: "file"
